# screenshot-tagger

./: .gitignore  README.md  describe-image.py  main.py  pyproject.toml
schema/: 01.sql
src/: derive.py  storage.py  tag.py
