[project]
name = "screenshot-tagger"
version = "0.1.0"
description = "Ingest screenshots with local Ollama (vision), tag and describe them, and search in SQLite."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "ollama>=0.6.1",
    "pillow>=12.2.0",
    "pydantic>=2.12.5",
]
